# elec-pred

./: .pre-commit-config.yaml  Makefile  docker-compose.yml  manage.py  pyproject.toml
elec_pred/: asgi.py  config.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
elec_pred/locale/ru/LC_MESSAGES/: django.mo  django.po
elec_pred/news/: apps.py  models.py  urls.py  views.py
elec_pred/news/migrations/: 0001_initial.py  0002_alter_news_options.py
elec_pred/static/css/: style.css
elec_pred/templates/: base.html
elec_pred/templates/crud_parts/: create.html  delete.html  update.html
elec_pred/templates/errors/: 404.html  500.html
elec_pred/templates/includes/: footer.html  head.html  nav.html
elec_pred/templates/news/: news_list.html
elec_pred/templates/users/: login.html  users_list.html
elec_pred/templates/votes/: active_votes.html  base_votes.html  past_votes.html
elec_pred/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
elec_pred/users/migrations/: 0001_initial.py  0002_alter_user_email.py
elec_pred/votes/: admin.py  apps.py  models.py  urls.py  views.py
elec_pred/votes/migrations/: 0001_initial.py  0002_remove_choice_created_at_remove_choice_votes.py  0003_alter_question_options_remove_question_pub_date_and_more.py  0004_alter_choice_created_at_alter_question_created_at.py  0005_alter_choice_options_alter_question_options_and_more.py  0006_vote_created_at.py  0007_alter_vote_options.py  0008_alter_vote_unique_together.py
